--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,15 +5,13 @@
     <meta charset="utf-8">
     <title>Pokemon CTG</title>
     <link rel="stylesheet" href="../../public/css/styles.css">
+    <link rel="icon" type="image/png" href="../../public/images/Pokéball.png">
+
 </head>
 
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="/">Login</a></li>
-            </ul>
-        </nav>
+        
     </header>
 
 
