--- a/views/protected.handlebars
+++ b/views/protected.handlebars
@@ -1,8 +1,4 @@
-<p>Welcome {{firstName}} {{lastName}} , the time is now: {{currentTime}}. Your role in the system is: {{role}}.</p>
-{{#if showAdminLink}}
-    <a href="/admin">Admin Page</a>
-{{/if}}
-
+<p>Welcome {{userName}} , the time is now: {{currentTime}}.</p>
 
 <div class="lgout">
         <a href="/logout">Logout</a>
