Created trading pages and routes. LEFT TO DO -> Client side validation, trading algo, trade button

--- a/views/protected.handlebars
+++ b/views/protected.handlebars
@@ -1,5 +1,6 @@
 <p>Welcome {{userName}} , the time is now: {{currentTime}}.</p>
 
 <div class="lgout">
-        <a href="/logout">Logout</a>
+  <a href="/trade"> Trade Now!</a>
+  <a href="/logout">Logout</a>
 </div>
