--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,31 +1,27 @@
-<!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>Pokemon CTG</title>
-    <link rel="stylesheet" href="../../public/css/styles.css">
-    <link rel="icon" type="image/png" href="../../public/images/Pokéball.png">
+    <link rel="stylesheet" href="../../public/css/styles.css" />
+    <link rel="icon" type="image/png" href="../../public/images/Pokéball.png" />
 
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        
+
     </header>
 
-
     <main>
-        {{{body}}}
-        
+      {{{body}}}
+
     </main>
 
     <footer>
-        <p>Group 3</p>
+      <p>Group 3</p>
     </footer>
 
-    
-
-</body>
+  </body>
 
 </html>
