--- a/views/trader.handlebars
+++ b/views/trader.handlebars
@@ -3,7 +3,7 @@
     {{sender}}. You are now trading with
     {{reciever}}</h1>
 
-  <form action="/trade/:userName" method="POST" id="search-user-cards-form">
+  <form action="/trade/:userName" method="POST" id="trade-user-cards-form">
 
     <div id="trader-yours">
 
