ALmost finished with trading confirmation

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -243,3 +243,24 @@ p {
 #trade-complete-theirs img {
   padding-top: 15px;
 }
+
+#tradeHome-main {
+  position: relative;
+  text-align: center;
+  padding: 20px;
+}
+
+#tradeHome-main::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #3498db;
+  z-index: -1;
+}
+
+#currentTradeData li {
+  list-style-type: none;
+}
