--- a/views/protected.handlebars
+++ b/views/protected.handlebars
@@ -3,4 +3,5 @@
 <div class="lgout">
   <a href="/trade"> Trade Now!</a>
   <a href="/logout">Logout</a>
+  <a href="/viewtrades">View Trades</a>
 </div>
