--- a/views/tradeComplete.handlebars
+++ b/views/tradeComplete.handlebars
@@ -1,7 +1,7 @@
 <div id="tradeComplete-main">
   <div>
     <h1>Congratulations
-      {{sender}}, your trade has been completed with
+      {{sender}}, your trade request has been sent to
       {{reciever}}</h1>
     <h2>Details of your trade: </h2>
   </div>
