--- a/views/tradeHome.handlebars
+++ b/views/tradeHome.handlebars
@@ -1,11 +1,9 @@
-<main>
-  <div>
-    <form action="/trade" method="POST" id="search-user-form">
-      <label for="tradeSearchUser" class="tradeSearchLabel">Trade with:</label>
-      <input type="text" id="tradeSearchUser" name="tradeSearchUser" />
+<div id="tradeHome-main">
+  <form action="/trade" method="POST" id="search-user-form">
+    <label for="tradeSearchUser" class="tradeSearchLabel">Trade with:</label>
+    <input type="text" id="tradeSearchUser" name="tradeSearchUser" />
 
-      <button type="submit" id="tradeSearchSubmit">Search for user</button>
+    <button type="submit" id="tradeSearchSubmit">Search for user</button>
+  </form>
 
-    </form>
-  </div>
-</main>
+</div>
