--- a/views/searchUsers.handlebars
+++ b/views/searchUsers.handlebars
@@ -2,7 +2,7 @@
 <p>Username: {{user.userName}}</p>
 <!-- Add button to send friend request -->
 
-<form id="searchForm" action="/searchUsers" method="post">
+<form id="searchUserForm" action="/searchUsers" method="post">
     <input type="text" id="searchInput" name="username" placeholder="Enter username">
     <button type="submit">Search</button>
 </form>
@@ -13,9 +13,10 @@
     <!-- If user found, display username and button to add as friend -->
     {{#if user}}
     <p>User found: {{user.username}}</p>
-    <form id="addFriendForm" action="/addFriend" method="post">
-        <input type="hidden" name="username" value="{{user.userName}}">
-        <button type="submit">Add as Friend</button>
+    <form id="sendFriendRequestForm" action="/addFriend" method="post">
+        <input type="hidden" id="receiverUsername" name="username" value="{{user.userName}}">
+        <button type="submit" id="addFriendButton">Add as Friend</button>
     </form>
     {{/if}}
 </div>
+<script src="/public/js/client_side_addUser.js"></script>
