added feature to search substrings and return all users that contain it

--- a/views/searchUsers.handlebars
+++ b/views/searchUsers.handlebars
@@ -1,7 +1,7 @@
 <h1>User Details</h1>
 <p>Username: {{user.userName}}</p>
-<!-- Add button to send friend request -->
 
+<!-- Add button to send friend request -->
 <form id="searchUserForm" action="/searchUsers" method="post">
     <input type="text" id="searchInput" name="username" placeholder="Enter username">
     <button type="submit">Search</button>
@@ -10,13 +10,27 @@
 <!-- Display search results -->
 <div id="searchResults">
     <!-- Results will be displayed here -->
-    <!-- If user found, display username and button to add as friend -->
-    {{#if user}}
-    <p>User found: {{user.username}}</p>
-    <form id="sendFriendRequestForm" action="/addFriend" method="post">
-        <input type="hidden" id="receiverUsername" name="username" value="{{user.userName}}">
-        <button type="submit" id="addFriendButton">Add as Friend</button>
-    </form>
+    {{#if users}}
+        <h2>Search Results:</h2>
+        <ul>
+            {{#each users}}
+                <li>
+                    <p>User found: {{this.userName}}</p>
+                    <form class="sendFriendRequestForm" action="/addFriend" method="post">
+                        <input type="hidden" name="username" value="{{this.userName}}">
+                        <button type="submit" class="addFriendButton">Add as Friend</button>
+                    </form>
+                </li>
+            {{/each}}
+        </ul>
+    {{else}}
+        <p>{{message}}</p>
     {{/if}}
+
+    <div>
+        <a href="/logout">Logout</a>
+        <a href="/protected">Protected</a>
+    </div>
 </div>
+
 <script src="/public/js/client_side_addUser.js"></script>
