Revert "Fixed entire middleware and added more styling"
This reverts commit ab3705786071e0ae8df566e30f0c3880b16e8f0e.

--- a/views/tradeHome.handlebars
+++ b/views/tradeHome.handlebars
@@ -1,6 +1,6 @@
 <div id="tradeHome-main">
   <form action="/trade" method="POST" id="search-user-form">
-    <label for="tradeSearchUser" id="tradeSearchLabel">Trade with:</label>
+    <label for="tradeSearchUser" class="tradeSearchLabel">Trade with:</label>
     <input type="text" id="tradeSearchUser" name="tradeSearchUser" />
 
     <button type="submit" id="tradeSearchSubmit">Search for user</button>
