collection views is up and running, tested pretty well I think

--- a/views/protected.handlebars
+++ b/views/protected.handlebars
@@ -16,6 +16,7 @@
 <div class="lgout">
   <a href="/trade">Trade Now!</a>
   <a href="/searchUsers">Search Users</a>
+  <a href="/viewCollections/:userName">View Collections</a>
   <a href="/logout">Logout</a>
 </div>
 <script src="/public/js/client_side_addUser.js"></script>
