Revert "Merge remote-tracking branch 'origin/development' into trading"
This reverts commit 55c76736fbf53fdd4f987b4250c4495dded82938, reversing
changes made to ab3705786071e0ae8df566e30f0c3880b16e8f0e.

--- a/views/protected.handlebars
+++ b/views/protected.handlebars
@@ -1,21 +1,7 @@
-<p>Welcome {{userName}}, the time is now: {{currentTime}}.</p>
-
-{{#if friendRequests.length}}
-  <h2>Friend Requests:</h2>
-  <ul>
-    {{#each friendRequests}}
-      <li>{{this}}</li>
-    {{/each}}
-  </ul>
-{{/if}}
-
-{{#if successMessage}}
-  <p>{{successMessage}}</p>
-{{/if}}
+<p>Welcome {{userName}} , the time is now: {{currentTime}}.</p>
 
 <div class="lgout">
-  <a href="/trade">Trade Now!</a>
-  <a href="/searchUsers">Search Users</a>
+  <a href="/trade"> Trade Now!</a>
   <a href="/logout">Logout</a>
+  <a href="/viewtrades">View Trades</a>
 </div>
-<script src="/public/js/client_side_addUser.js"></script>
