--- a/views/ranking.handlebars
+++ b/views/ranking.handlebars
@@ -1,4 +1,3 @@
-
 <table id="rankTable">
     <tr>
         <th>Rank</th>
@@ -14,4 +13,7 @@
         </tr>
     {{/each}}
 </table>
-<a href="/protected">Go Back</a>
+<div class="container">
+    <button class="homeButton" onclick="location.href='/protected';" type="submit">Home Page</button>
+</div>
+
