--- a/views/tradeComplete.handlebars
+++ b/views/tradeComplete.handlebars
@@ -39,5 +39,7 @@
       {{/each}}
     </ul>
   </div>
-
+  <div class="container">
+    <button class="homeButton" onclick="location.href='/protected';" type="submit">Home Page</button>
+  </div>
 </div>
