--- a/views/tradeHome.handlebars
+++ b/views/tradeHome.handlebars
@@ -5,5 +5,7 @@
 
     <button type="submit" id="tradeSearchSubmit">Search for user</button>
   </form>
-
+</div>
+<div class="container">
+    <button class="homeButton" onclick="location.href='/protected';" type="submit">Home Page</button>
 </div>
