--- a/views/trader.handlebars
+++ b/views/trader.handlebars
@@ -83,5 +83,8 @@
     </div>
 
   </form>
+  <div class="container">
+    <button class="homeButton" onclick="location.href='/protected';" type="submit">Cancel Trade and Return to Home Page</button>
+  </div>
   <script src="/public/js/client_side_trading.js"></script>
 </main>
