--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,15 +1,24 @@
-<p>Please log into your Pokemon account.</p>
+<p class="centerLogin">Please log into your Pokemon account.</p>
 <form id="login-form" method="POST" action="/login">
-  <div><label for="userNameInput">User Name:</label>
+
+  <div class="centerLogin">
+    <label for="userNameInput">User Name:</label>
     <input type="text" id="userNameInput" name="userNameInput" />
   </div>
 
-  <div><label for="passwordInput">Password:</label>
+  <div class="centerLogin" style="margin-top: 10px">
+    <label for="passwordInput">Password:</label>
     <input type="password" id="passwordInput" name="passwordInput" required />
   </div>
 
-  <button type="submit" class="button-pokeball" id="checkButton"><span>Login</span></button>
-  <p id="error" class="error" style="display:none;"></p>
+  <button type="submit" class="button-pokeball" id="checkButton" style="margin-top: 10px"><span>Login</span></button>
+  
+  <p id="error" class="error"></p>
+  
 </form>
-<a href="/register">Don't have an account? Register here.</a>
+
+<div class="container">
+  <button class="homeButton" onclick="location.href='/register';" type="submit">Don't have an account? Register
+    here.</button>
+</div>
 <script src="/public/js/client_side_validation.js"></script>
